<resources>
    <string name="app_name">Pomodoro</string>
    <!--    MainActivity button 'Statistics' -->
    <string name="statistics_label">Statistics</string>
    <!--    MainActivity button 'Create pomodoro' -->
    <string name="create_pomodoro_label">Create pomodoro</string>
    <!--    Overview -->
    <string name="overview_label">Overview</string>
    <!--    Distribution -->
    <string name="distribution_label">Distribution</string>
    <!--    History -->
    <string name="history_label">History</string>
    <!--    Labels from overview -->
    <string name="today_label">Today</string>
    <string name="last_week_label">Last week</string>
    <string name="last_month_label">Last month</string>
    <string name="last_year_label">Last year</string>
    <!--    MainActivity -->
    <string name="text_view_countdown"></string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset</string>
    <!--    CreatePomodoroActivity -->
    <string name="edit_label">Create</string>
    <string name="name_label">Name</string>
    <string name="edit_name_input">Edit Name</string>
    <string name="pomo_time_label">Pomo Time</string>
    <string name="pomo_time_details_label">Time for a focus period</string>
    <string name="shortbreak_time_label">Short Break Time</string>
    <string name="shortbreak_time_details_label">Time for a short rest between pomos</string>
    <string name="longbreak_time_label">Long Break Time</string>
    <string name="longbreak_time_details_label">Time for a long rest between sets</string>
    <string name="sets_label">Set of Pomo</string>
    <string name="sets_details_label">Amount of pomos for a set</string>
    <string name="sets_until_break_label">Number of sets</string>
    <string name="sets_until_break_details_label">Amount of sets until long break</string>
    <string name="min_label">min</string>
    <string name="number_label">No.</string>
    <string name="min25_label">25</string>
    <string name="min5_label">5</string>
    <string name="no1_label">1</string>
    <string name="color_label">Color</string>
    <string name="apply_button">Apply</string>
    <string name="pomdoro_title">Pomdoro title</string>
    <string name="focus">Focus</string>
    <string name="short_break">Break</string>
    <string name="sets">Sets</string>
    <string name="long_break">Long break</string>
    <string name="sets_until_break">Sets until break</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>


</resources>