<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StatisticsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview_label"
            android:textColor="@color/design_default_color_primary"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/today_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_label" />

                <TextView
                    android:id="@+id/today_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Value" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"

                android:padding="16dp">

                <TextView
                    android:id="@+id/last_week_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_week_label" />

                <TextView
                    android:id="@+id/last_week_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Value" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"

                android:padding="16dp">

                <TextView
                    android:id="@+id/last_month_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_month_label" />

                <TextView
                    android:id="@+id/last_month_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Value" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"

                android:padding="16dp">

                <TextView
                    android:id="@+id/last_year_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_year_label" />

                <TextView
                    android:id="@+id/last_year_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Value" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_label"
            android:textColor="@color/design_default_color_primary"
            android:textSize="32sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/history_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distribution_label"
            android:textColor="@color/design_default_color_primary"
            android:textSize="32sp" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/distribution_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        </com.github.mikephil.charting.charts.PieChart>
    </LinearLayout>
</LinearLayout>