<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.google.android.flexbox.FlexboxLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:alignItems="center"
        app:flexDirection="column"
        app:justifyContent="center">

        <TextView
            android:id="@+id/text_view_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_countdown"
            android:textColor="@color/design_default_color_primary"
            android:textSize="120sp" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:justifyContent="space_evenly">

            <Button
                android:id="@+id/start_pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startPauseButton"
                android:text="@string/start_pause_button" />


            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetButton"
                android:text="@string/reset_button"
                android:visibility="invisible"
                tools:visibility="visible" />
        </com.google.android.flexbox.FlexboxLayout>
    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:alignContent="space_around"
        app:alignItems="center"
        app:flexDirection="column"
        app:justifyContent="center">

        <Button
            android:id="@+id/statistics_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openStatisticsActivity"
            android:text="@string/statistics_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/create_pomodoro_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openCreatePomodoroActivity"
            android:text="@string/create_pomodoro_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>